Adjusted icon sizing to fix blurry icons.

--- a/scss/ui/_ui_config.scss
+++ b/scss/ui/_ui_config.scss
@@ -74,8 +74,8 @@ $ui-border-radius-large:5px;
 
 // Icons
 $ui-font-family-icon: "Ionicons" !default;
-$ui-icon-size: 1.1*$ui-font-size-base !default;
-$ui-icon-box-size:2*$ui-line-height-base*$ui-icon-size !default;
+$ui-icon-size: $ui-font-size-base !default;
+$ui-icon-box-size:2.2*$ui-line-height-base*$ui-icon-size !default;
 
 // Navbar
 $ui-navbar-height:$ui-icon-box-size;
